--- a/frontend/src/components/universal/Backdrop.css
+++ b/frontend/src/components/universal/Backdrop.css
@@ -1,7 +1,8 @@
 .backdrop {
     display: fixed;
-    height: 100%;
-    width: 100%;
+    
+    max-height: 100vh;
+    width: 100vw;
     background-image: linear-gradient(to bottom right, red, yellow);
     z-index: -1;
     overflow: scroll;
