--- a/frontend/src/components/universal/Backdrop.css
+++ b/frontend/src/components/universal/Backdrop.css
@@ -1,7 +1,6 @@
 .backdrop {
     display: fixed;
-    
-    max-height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-image: linear-gradient(to bottom right, red, yellow);
     z-index: -1;
